--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,3 +1,29 @@
+- title: IWACO
+  year: 2023
+  id: iwaco2023
+  link: https://2023.splashcon.org/home/iwaco-2023
+  deadline: '2023-08-02 23:59:59'
+  timezone: UTC-12
+  place: Cascais, Portugal
+  date: 22-27, October, 2023
+  start: 2023-10-22
+  end: 2023-10-27
+  sub: PL
+  note:
+
+- title: OOPSLA
+  year: 2024
+  id: oopsla2024-r1
+  link: https://2024.splashcon.org/
+  deadline: '2023-10-20 23:59:59'
+  timezone: UTC-12
+  place: TBA
+  date: TBA
+  start: TBA
+  end: TBA
+  sub: PL
+  note: Round 1
+
 - title: PLDI
   year: 2024
   id: pldi2024
@@ -10,3 +36,17 @@
   end: TBA
   sub: PL
   note:
+
+- title: ECOOP/ISSTA
+  year: 2024
+  id: ecoop2024
+  link: https://conf.researchr.org/home/ecoop-issta-2024
+  deadline: '2023-12-15 23:59:59'
+  timezone: UTC-12
+  place: Vienna, Austria
+  date: 16-20, September, 2024
+  start: 2024-09-16
+  end: 2024-09-20
+  sub: PL
+  note: Round 1
+
