--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -52,3 +52,16 @@
   sub: PL
   note: Round 1
 
+
+- title: PLDI
+  year: 2025
+  id: pldi2025
+  link: https://pldi25.sigplan.org/
+  deadline: '2024-11-14 23:59:59'
+  timezone: UTC-12
+  place: Seoul, South Korea
+  date: 16-20, June, 2025
+  start: 2025-06-16
+  end: 2025-06-20
+  sub: PL
+  note:
